Update index.html with an empty div

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <title>rmtDev -- Find your remote developer job</title>
   </head>
   <body>
+    <div>
+      Empty div
+    </div>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
